Fix admin username update functionality and Java 11 compatibility issues